Reworked some of the previous changes. Removed old tests and plan to rework them for the new setup.

--- a/Project-2-EMS/Project-2-EMS.csproj
+++ b/Project-2-EMS/Project-2-EMS.csproj
@@ -106,32 +106,21 @@
     <Compile Include="Models\ComparerModels\PatientInfoComparer.cs" />
     <Compile Include="Models\ComparerModels\PrescriptionComparer.cs" />
     <Compile Include="Models\DatabaseModels\ISqlDatabaseAccess.cs" />
+    <Compile Include="Models\DatabaseModels\QueryCommandModels\AppointmentQuery.cs" />
+    <Compile Include="Models\DatabaseModels\QueryCommandModels\PatientInfoQuery.cs" />
+    <Compile Include="Models\DatabaseModels\QueryCommandModels\PrescriptionQuery.cs" />
     <Compile Include="Models\DatabaseModels\SqlDatabaseAccess.cs" />
-    <Compile Include="Models\DatabaseModels\SqlQueryModels\AppointmentQueryModels\CountAppointment.cs" />
     <Compile Include="Models\DatabaseModels\SqlQueryModels\SqlQueryInterfaceModels\ICountQuery.cs" />
-    <Compile Include="Models\DatabaseModels\SqlQueryModels\SqlQueryInterfaceModels\IListQuery.cs" />
     <Compile Include="Models\DatabaseModels\SqlQueryModels\SqlQueryInterfaceModels\INonQuery.cs" />
-    <Compile Include="Models\DatabaseModels\SqlQueryModels\PatientInfoQueryModels\CountPatientInfo.cs" />
-    <Compile Include="Models\DatabaseModels\SqlQueryModels\PrescriptionQueryModels\CountPrescription.cs" />
-    <Compile Include="Models\DatabaseModels\SqlQueryModels\AppointmentQueryModels\DeleteAppointmentBy_VisitId.cs" />
-    <Compile Include="Models\DatabaseModels\SqlQueryModels\AppointmentQueryModels\InsertAppointment.cs" />
-    <Compile Include="Models\DatabaseModels\SqlQueryModels\PatientInfoQueryModels\InsertPatientInfo.cs" />
-    <Compile Include="Models\DatabaseModels\SqlQueryModels\PrescriptionQueryModels\InsertPrescription.cs" />
-    <Compile Include="Models\DatabaseModels\SqlQueryModels\AppointmentQueryModels\SelectAppointmentBy_DateRange.cs" />
-    <Compile Include="Models\DatabaseModels\SqlQueryModels\AppointmentQueryModels\SelectAppointmentBy_Date_PatientId.cs" />
-    <Compile Include="Models\DatabaseModels\SqlQueryModels\AppointmentQueryModels\SelectAppointmentBy_PatientId.cs" />
-    <Compile Include="Models\DatabaseModels\SqlQueryModels\AppointmentQueryModels\SelectAppointmentBy_VisitId.cs" />
-    <Compile Include="Models\DatabaseModels\SqlQueryModels\PatientInfoQueryModels\SelectPatientInfoBy_FullName_AND.cs" />
-    <Compile Include="Models\DatabaseModels\SqlQueryModels\PatientInfoQueryModels\SelectPatientInfoBy_FullName_OR.cs" />
-    <Compile Include="Models\DatabaseModels\SqlQueryModels\PatientInfoQueryModels\SelectPatientInfoBy_PatientId.cs" />
-    <Compile Include="Models\DatabaseModels\SqlQueryModels\PrescriptionQueryModels\SelectPrescriptionBy_PatientId.cs" />
-    <Compile Include="Models\DatabaseModels\SqlQueryModels\PrescriptionQueryModels\SelectPrescriptionBy_VisitId.cs" />
-    <Compile Include="Models\DatabaseModels\SqlQueryModels\PatientInfoQueryModels\UpdateBalanceBy_Cost_PatientId.cs" />
+    <Compile Include="Models\DatabaseModels\SqlQueryModels\SqlQueryInterfaceModels\ISelectQuery.cs" />
     <Compile Include="Models\DatabaseModels\SqlQueryModels\SqlQueryInterfaceModels\ISqlQuery.cs" />
-    <Compile Include="Models\DatabaseModels\SqlQueryModels\SqlReaderModels\ISqlCountReader.cs" />
-    <Compile Include="Models\DatabaseModels\SqlQueryModels\SqlReaderModels\ISqlListReader.cs" />
+    <Compile Include="Models\DatabaseModels\SqlQueryModels\SqlQueryTypeModels\CountQuery.cs" />
+    <Compile Include="Models\DatabaseModels\SqlQueryModels\SqlQueryTypeModels\SelectQuery.cs" />
+    <Compile Include="Models\DatabaseModels\SqlQueryModels\SqlQueryTypeModels\NonQuery.cs" />
+    <Compile Include="Models\DatabaseModels\SqlQueryModels\SqlReaderModels\ISqlReader.cs" />
     <Compile Include="Models\DatabaseModels\SqlQueryModels\SqlReaderModels\SqlCountReader.cs" />
     <Compile Include="Models\DatabaseModels\SqlQueryModels\SqlReaderModels\SqlListReader.cs" />
+    <Compile Include="Models\DatabaseModels\SqlQueryModels\SqlReaderModels\SqlNonQueryReader.cs" />
     <Compile Include="Models\PatientModels\IPatient.cs" />
     <Compile Include="Models\PatientModels\PatientInfo.cs" />
     <Compile Include="Models\PatientModels\PatientAppointment.cs" />
