Rewrote class names to better reflect what they are.

--- a/Project-2-EMS/Project-2-EMS.csproj
+++ b/Project-2-EMS/Project-2-EMS.csproj
@@ -110,13 +110,13 @@
     <Compile Include="Models\DatabaseModels\QueryCommandModels\PatientInfoQuery.cs" />
     <Compile Include="Models\DatabaseModels\QueryCommandModels\PrescriptionQuery.cs" />
     <Compile Include="Models\DatabaseModels\SqlDatabaseAccess.cs" />
-    <Compile Include="Models\DatabaseModels\SqlQueryModels\SqlQueryInterfaceModels\ICountQuery.cs" />
-    <Compile Include="Models\DatabaseModels\SqlQueryModels\SqlQueryInterfaceModels\INonQuery.cs" />
-    <Compile Include="Models\DatabaseModels\SqlQueryModels\SqlQueryInterfaceModels\ISelectQuery.cs" />
-    <Compile Include="Models\DatabaseModels\SqlQueryModels\SqlQueryInterfaceModels\ISqlQuery.cs" />
-    <Compile Include="Models\DatabaseModels\SqlQueryModels\SqlQueryTypeModels\CountQuery.cs" />
-    <Compile Include="Models\DatabaseModels\SqlQueryModels\SqlQueryTypeModels\SelectQuery.cs" />
-    <Compile Include="Models\DatabaseModels\SqlQueryModels\SqlQueryTypeModels\NonQuery.cs" />
+    <Compile Include="Models\DatabaseModels\SqlQueryModels\QueryCommandModels\ICountCommand.cs" />
+    <Compile Include="Models\DatabaseModels\SqlQueryModels\QueryCommandModels\INonQueryCommand.cs" />
+    <Compile Include="Models\DatabaseModels\SqlQueryModels\QueryCommandModels\ISelectCommand.cs" />
+    <Compile Include="Models\DatabaseModels\SqlQueryModels\QueryCommandModels\ISqlQueryCommand.cs" />
+    <Compile Include="Models\DatabaseModels\SqlQueryModels\QueryCommandModels\CountCommand.cs" />
+    <Compile Include="Models\DatabaseModels\SqlQueryModels\QueryCommandModels\SelectCommand.cs" />
+    <Compile Include="Models\DatabaseModels\SqlQueryModels\QueryCommandModels\NonQueryCommand.cs" />
     <Compile Include="Models\DatabaseModels\SqlQueryModels\SqlReaderModels\ISqlReader.cs" />
     <Compile Include="Models\DatabaseModels\SqlQueryModels\SqlReaderModels\SqlCountReader.cs" />
     <Compile Include="Models\DatabaseModels\SqlQueryModels\SqlReaderModels\SqlListReader.cs" />
