Re-added tests for the SqlDatabaseAccess class

--- a/Project-2-EMS_Tests/Project-2-EMS_Tests.csproj
+++ b/Project-2-EMS_Tests/Project-2-EMS_Tests.csproj
@@ -70,6 +70,7 @@
     <Compile Include="Models_Tests\ComparerModels_Tests\AppointmentComparer_Test.cs" />
     <Compile Include="Models_Tests\ComparerModels_Tests\PatientInfoComparer_Test.cs" />
     <Compile Include="Models_Tests\ComparerModels_Tests\PrescriptionComparer_Test.cs" />
+    <Compile Include="Models_Tests\DatabaseModels_Tests\SqlDatabaseAccess_Test.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
